[package]
name = "vhdl_format"
version = "0.1.0"
authors = ["Matthijs Brobel <m1brobbel@gmail.com>"]
license = "MPL-2.0"
description = "VHDL Formatter"
repository = "https://github.com/kraigher/rust_hdl"
edition = "2018"

[dependencies]
vhdl_parser = { version = "^0", path = "../vhdl_parser"}

clap = "2.32.0"
log = "0.4.6"
env_logger = "0.6.0"
